Udacity - HTML_CSS_Lesson2

--- a/toplist/style.css
+++ b/toplist/style.css
@@ -1,5 +1,4 @@
 element.style {
-	
 }
 
 .app {
@@ -9,8 +8,10 @@ element.style {
 
 * {
 	outline: 1px solid red !important;
+    background-color: #33BEBE;
 }
 
+/*
 * {
 	-webkit-box-sizing: border-box;  
 	-moz-box-sizing: border-box;
@@ -18,11 +19,13 @@ element.style {
 	box-sizing: border-box;
 	max-width: 460px;
 }
+*/
 
 .image {
 	max-width: 460px;
+    margin-right: 30px;
 }
 
 .description {
-	max-width: 705px;
+	max-width: 700px;
 }
